--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,8 @@ body {
 
 .content-area {
   margin: 0 auto;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   width: 100%;
 }
 
@@ -41,6 +43,7 @@ body {
 
 header {
   background-color: var(--red);
+  width: 100%;
 }
 
 header ul {
@@ -80,12 +83,6 @@ header .website img {
   margin-right: 0.5em;
 }
 
-@media (min-width: 615px) {
-  header ul {
-    padding-left: 0;
-  }
-}
-
 @media (max-width: 375px) {
   header ul {
     flex-direction: column;
@@ -97,17 +94,18 @@ header .website img {
   }
 }
 
-/* Blog */
+/* Blog List */
 
 .blog-list {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 2rem;
   margin-left: 0;
 }
 
 .blog-list li {
   display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
@@ -115,20 +113,37 @@ header .website img {
   margin: 0;
 }
 
+.blog-list li img {
+  height: 150px;
+  width: 200px;
+}
+
 .blog-list li .date {
-  margin-bottom: 1em;
+  margin: 1em 0;
 }
 
 .blog-list li .summary {
   margin: 0;
 }
 
+@media (min-width: 550px) {
+  .blog-list {
+    gap: 3rem;
+  }
+
+  .blog-list li {
+    flex-direction: row;
+  }
+}
+
+/* Blog */
+
 main > *:last-child {
   margin-bottom: 3.75em;
 }
 
 h1 {
-  margin: 1.5em 0 0.5em;
+  margin: 0.5em 0;
   font-size: 2.5em;
   font-weight: bold;
   color: var(--dark-red);
@@ -177,6 +192,10 @@ a:visited {
   .content-area.blog {
     max-width: 800px;
   }
+
+  h1 {
+    margin-top: 1.5em;
+  }
 }
 
 /* Gallery */
@@ -188,30 +207,42 @@ a:visited {
 .gallery-grid {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 0.5rem;
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
 }
 
 .gallery-grid > a {
   position: relative;
+}
+
+.gallery-grid img {
   width: 500px;
-  height: 375px;
+  max-width: 100%;
+  height: auto;
 }
 
-@media (min-width: 515px) {
+@media (min-width: 500px) {
   .content-area.gallery {
-    max-width: 515px;
+    max-width: 500px;
   }
 }
 
-@media (min-width: 1039px) {
-  .content-area.gallery {
-    max-width: 1039px;
+@media (min-width: 800px) {
+  .gallery-grid {
+    gap: 1.5rem;
   }
 }
 
-@media (min-width: 1563px) {
+@media (min-width: 1024px) {
   .content-area.gallery {
-    max-width: 1563px;
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1548px) {
+  .content-area.gallery {
+    max-width: 1548px;
   }
 }
 
@@ -227,13 +258,9 @@ a:visited {
   max-width: 100%;
 }
 
-.content-area.photo h1 {
-  margin-top: 1em;
-}
-
 @media (max-width: 699px) {
   .content-area.photo .photo {
-    margin-top: 0;
+    margin: 0 -0.5rem 0;
   }
 }
 
