--- a/src/styles.css
+++ b/src/styles.css
@@ -122,6 +122,19 @@ header .website img {
   }
 }
 
+/* Footer */
+
+footer {
+  display: flex;
+  justify-content: center;
+}
+
+footer p {
+  margin-top: 0;
+  text-align: center;
+  font-style: italic;
+}
+
 /* Blog List */
 
 .blog-list {
