--- a/src/styles.css
+++ b/src/styles.css
@@ -398,6 +398,25 @@ button + button,
   margin-left: 0.5em;
 }
 
+/* Pill */
+
+.pill {
+  display: inline-block;
+  background-color: var(--color-bg);
+  padding: 0 0.5em;
+  border: 1px solid var(--color-heading);
+  border-radius: 1em;
+  margin: 1px 0;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.pill-row {
+  display: inline-flex;
+  flex-direction: row;
+  gap: 0.25em;
+}
+
 /* Input */
 
 .input {
