--- a/src/styles.css
+++ b/src/styles.css
@@ -207,6 +207,13 @@ h2 {
   color: var(--color-heading);
 }
 
+h3 {
+  margin: 1em 0 0.5em;
+  font-size: 1.25em;
+  font-weight: bold;
+  color: var(--color-heading);
+}
+
 p {
   margin: 1.5em 0;
 }
