--- a/src/styles.css
+++ b/src/styles.css
@@ -1,497 +1,49 @@
-/* Theme */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-html {
-  --darker-red: #620000;
-  --dark-red: #B60106;
-  --red: #D72F3C;
-  --light-red: #F5555F;
-  --lightest-red: #FCC4C7;
-  --white: #FFFFFF;
-  --dark-grey: #111111;
-
-  --color-bg: var(--white);
-  --color-text: var(--dark-grey);
-  --color-heading: var(--dark-red);
-  --color-link: var(--red);
-  --color-link-visited: var(--darker-red);
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    --color-text: var(--white);
-    --color-bg: var(--dark-grey);
-    --color-heading: var(--red);
-    --color-link: var(--light-red);
-    --color-link-visited: var(--lightest-red);
-  }
-}
-
-/* Global */
-
-@font-face {
-  font-family: "San Francisco";
-  font-weight: 400;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
-}
-
-@font-face {
-  font-family: "San Francisco Bold";
-  font-weight: 900;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff");
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-*:focus-visible {
-  outline-color: var(--darker-red);
-}
-
-body {
-  font-family: "San Francisco", Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: normal;
-  color: var(--color-text);
-  background-color: var(--color-bg);
-}
-
-/* Width */
-
-.content-area {
-  margin: 0 auto;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  width: 100%;
-}
-
-/* Header */
-
-header {
-  background-color: var(--red);
-  width: 100%;
-}
-
-header ul {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1em;
-  padding: 0.5em;
-  list-style-type: none;
-}
-
-header li {
-  font-size: 1.5em;
-}
-
-header a {
-  color: var(--white);
-  text-decoration: none;
-}
-
-header a:hover {
-  text-decoration: underline;
-}
-
-header a:visited {
-  color: var(--white);
-}
-
-header .website {
-  flex: 1;
-  display: flex;
-  align-items: center;
-}
-
-header .website img {
-  border-radius: 64px;
-  margin-right: 0.5em;
-}
-
-@media (max-width: 375px) {
-  header ul {
-    flex-direction: column;
-    align-items: flex-start;
+@layer base {
+  @font-face {
+    font-family: "San Francisco";
+    font-weight: 400;
+    src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
   }
 
-  header .website img {
-    display: none;
-  }
+  @font-face {
+    font-family: "San Francisco Bold";
+    font-weight: 900;
+    src: url(https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff)
 }
 
-/* Footer */
-
-footer {
-  display: flex;
-  justify-content: center;
-}
-
-footer p {
-  margin-top: 0;
-  text-align: center;
-  font-style: italic;
-}
-
-/* Blog List */
-
-.blog-list {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  margin-left: 0;
-}
-
-.blog-list li {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.blog-list li > div {
-  flex: 1;
-}
-
-.blog-list li h2 {
-  margin: 0;
-}
-
-.blog-list li img {
-  width: 200px;
-  max-height: 100%;
-}
-
-.blog-list li .date {
-  margin: 1em 0;
-  font-style: italic;
-}
-
-.blog-list li .summary {
-  margin: 0;
-}
-
-@media (min-width: 550px) {
-  .blog-list {
-    gap: 3rem;
+  body {
+    @apply bg-mono-900 dark:bg-mono-50 text-mono-50 dark:text-mono-900 min-w-[450px];
   }
 
-  .blog-list li {
-    flex-direction: row;
-  }
-}
-
-.emoji {
-  cursor: default;
-  user-select: none;
-}
-
-/* Blog */
-
-main > *:last-child {
-  margin-bottom: 3.75em;
-}
-
-h1 {
-  margin: 0.5em 0;
-  font-size: 2.5em;
-  font-weight: bold;
-  color: var(--color-heading);
-}
-
-h2 {
-  margin: 1.5em 0 0.5em;
-  font-size: 1.5em;
-  font-weight: bold;
-  color: var(--color-heading);
-}
-
-h3 {
-  margin: 1em 0 0.5em;
-  font-size: 1.25em;
-  font-weight: bold;
-  color: var(--color-heading);
-}
-
-p {
-  margin: 1.5em 0;
-}
-
-strong {
-  font-family: "San Francisco Bold", Helvetica, sans-serif;
-  font-weight: bold;
-}
-
-ol, ul {
-  margin: 1.5em 0 1.5em 2em;
-}
-
-main.content-area.blog li {
-  margin: 0.5em 0;
-}
-
-li::marker {
-  padding-right: 1em;
-  color: var(--color-heading);
-}
-
-a {
-  color: var(--color-link);
-}
-
-a:visited {
-  color: var(--color-link-visited);
-}
-
-@media (min-width: 600px) {
-  .content-area.blog {
-    max-width: 600px;
-  }
-}
-
-@media (min-width: 800px) {
-  .content-area.blog {
-    max-width: 800px;
+  h1, h2, h3 {
+    @apply leading-tight font-bold text-rising-700 dark:text-rising-600;
   }
 
   h1 {
-    margin-top: 1.5em;
-  }
-}
-
-/* Gallery */
-
-.content-area.gallery h2 {
-  margin-top: 0;
-}
-
-.gallery-grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-}
-
-.gallery-grid > a {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-height: 375px;
-}
-
-.gallery-grid img {
-  background-color: hsla(0 0% 50% / 0.5);
-}
-
-.gallery-grid img.landscape {
-  width: 500px;
-  max-width: 100%;
-  height: auto;
-}
-
-.gallery-grid img.portrait {
-  width: auto;
-  max-width: 500px;
-  height: 375px;
-}
-
-@media (min-width: calc(500px + 1rem)) {
-  .content-area.gallery {
-    max-width: calc(500px + 1rem);
-  }
-}
-
-@media (min-width: 800px) {
-  .gallery-grid {
-    gap: 24px;
+    @apply text-3xl mt-6 mb-6 md:mt-12;
   }
 
-  .gallery-grid > a {
-    min-width: 500px;
-  }
-}
-
-@media (min-width: calc(1024px + 1rem)) {
-  .content-area.gallery {
-    max-width: calc(1024px + 1rem);
+  h2 {
+    @apply text-2xl mt-6 mb-4 md:mt-8;
   }
 
-  .gallery-heading {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+  h3 {
+    @apply text-xl mt-6 mb-4;
   }
 
-  .gallery-heading p {
-    margin: 0.75em 0;
+  p {
+    @apply leading-tight my-6;
   }
 
-  .gallery-grid > a {
-    min-height: 332.87px;
+  a {
+    @apply text-rising-600 dark:text-rising-500 underline;
   }
-}
 
-@media (min-width: calc(1548px + 1rem)) {
-  .content-area.gallery {
-    max-width: calc(1548px + 1rem);
+  a:visited {
+    @apply text-rising-900 dark:text-rising-200;
   }
-}
-
-@media (min-width: calc(2072px + 1rem)) {
-  .content-area.gallery {
-    max-width: calc(2072px + 1rem);
-  }
-}
-
-/* Photo */
-
-.content-area.photo .photo {
-  display: flex;
-  justify-content: center;
-  margin: 2.5rem auto 0;
-}
-
-.content-area.photo .photo > img {
-  max-width: 100%;
-  max-height: 90vh;
-}
-
-@media (max-width: 699px) {
-  .content-area.photo .photo {
-    margin: 0 -0.5rem 0;
-  }
-}
-
-@media (min-width: 700px) {
-  .content-area.photo {
-    max-width: 700px;
-  }
-}
-
-@media (min-width: 1000px) {
-  .content-area.photo {
-    max-width: 1000px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .content-area.photo {
-    max-width: 1200px;
-  }
-}
-
-.disclaimer {
-  font-style: italic;
-}
-
-/* Button */
-
-button,
-.button {
-  display: inline-block;
-  padding: 0.5em 1em;
-  background-color: var(--red);
-  color: var(--white);
-  text-decoration: none;
-  border: none;
-}
-
-button:hover,
-button:active,
-.button:hover,
-.button:active {
-  background-color: var(--dark-red);
-}
-
-a.button {
-  color: var(--white);
-}
-
-button + button,
-.button + .button {
-  margin-left: 0.5em;
-}
-
-/* Pill */
-
-.pill {
-  display: inline-block;
-  background-color: var(--color-bg);
-  padding: 0 0.5em;
-  border: 1px solid var(--color-text);
-  border-radius: 1em;
-  margin: 1px 0;
-}
-
-a.pill {
-  border-color: var(--color-heading);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-a.pill:visited {
-  border-color: var(--color-link-visited);
-}
-
-/* Input */
-
-.input {
-  display: inline-block;
-  padding: 0.5em 1em;
-  border: none;
-}
-
-/* Pagination */
-
-.pagination {
-  display: flex;
-  margin-top: 1em;
-}
-
-.pagination > div {
-  display: flex;
-  flex: 1;
-  align-items: center;
-}
-
-.pagination .current {
-  justify-content: center;
-}
-
-.pagination .next {
-  justify-content: flex-end;
-}
-
-/* Block */
-
-.block {
-  margin: 0.5rem auto;
-  padding: 1em 0.5em;
-  background-color: var(--lightest-red);
-}
-
-.block > *:first-child {
-  margin-top: 0;
-}
-
-.block > *:last-child {
-  margin-bottom: 0;
-}
-
-/* Newsletter */
-
-.newsletter input,
-.newsletter button {
-  font-size: 1rem;
-}
-
-.newsletter form {
-  display: flex;
-  gap: 0.5em;
-}
-
-.newsletter input {
-  flex: 1;
-  max-width: 25em;
 }
