--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
     font-family: "San Francisco Bold";
     font-weight: 900;
     src: url(https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff)
-}
+  }
 
   body {
     @apply bg-mono-900 dark:bg-mono-50 text-mono-50 dark:text-mono-900 min-w-[450px];
@@ -45,5 +45,29 @@
 
   a:visited {
     @apply text-rising-900 dark:text-rising-200;
+  }
+
+  table {
+    @apply my-4;
+  }
+
+  thead {
+    @apply bg-mono-800 dark:bg-mono-100 text-rising-700 dark:text-rising-600;
+  }
+
+  th, td {
+    @apply px-4 py-1 border-2;
+  }
+
+  th {
+    @apply  border-mono-900 dark:border-mono-50
+  }
+
+  td {
+    @apply border-mono-800 dark:border-mono-100 ;
+  }
+
+  th:not(:first-child), td:not(:first-child) {
+    @apply text-right;
   }
 }
